--- a/app/src/main/res/layout/device_detail.xml
+++ b/app/src/main/res/layout/device_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/details_view"
-    android:visibility="gone">
+    android:visibility="visible">
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
@@ -31,12 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_file_button"
-                android:visibility="gone" />
+                android:visibility="visible" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/device_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/device_info"
             android:layout_width="match_parent"
@@ -55,9 +51,9 @@
         android:id="@+id/status_bar"
         android:orientation="vertical"
         android:layout_gravity="bottom"
-        android:layout_height="37dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
-        android:background="@android:color/background_dark">
+        android:background="@android:color/holo_green_dark">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
