--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -12,7 +12,8 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:gravity="center_vertical"/>
+        android:gravity="center_vertical"
+        android:background="@android:color/black"/>
     <!--  self info -->
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -53,7 +54,8 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"
+        android:background="@android:color/black"/>
 
     <!-- available peers-->
     <ListView
@@ -63,10 +65,5 @@
         android:layout_weight="1"
         android:drawSelectorOnTop="false"/>
 
-    <TextView
-        android:id="@+id/android:empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/empty_message"/>
+
 </LinearLayout>
