--- a/app/src/main/res/layout/activity_bluetooth_chat.xml
+++ b/app/src/main/res/layout/activity_bluetooth_chat.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <ListView android:id="@+id/in"
+    <ListView android:id="@+id/message_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:stackFromBottom="true"
@@ -19,11 +19,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="bottom"
+            android:layout_gravity="top"
             />
         <Button android:id="@+id/button_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:text="@string/send"
             />
     </LinearLayout>
