--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -18,4 +18,5 @@
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:padding="5dp"
+    android:background="@android:color/holo_green_light"
 />
