--- a/app/src/main/res/layout/activity_shadow_talk.xml
+++ b/app/src/main/res/layout/activity_shadow_talk.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/my_icon"
+            android:id="@+id/myself_icon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
