--- a/app/src/main/res/layout/fragment_settings_page.xml
+++ b/app/src/main/res/layout/fragment_settings_page.xml
@@ -13,13 +13,8 @@
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="friends page"/>
+        android:text="settings page"/>
 
-    <ListView
-        android:id="@+id/list_view_friends"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </ListView>
 
 </LinearLayout>
