Coding settings view page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             class="com.specialdark.utopia.shadowtalk.wifi.DeviceListFragment"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            tools:layout="@layout/device_list" />
+            tools:layout="@layout/fragment_wifi_device_list" />
         <!--tools:layout="@layout/row_devices"-->
 
 
@@ -29,7 +29,7 @@
             class="com.specialdark.utopia.shadowtalk.wifi.DeviceDetailFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/device_detail" />
+            tools:layout="@layout/fragment_wifi_device_detail" />
         <!--tools:layout="@layout/device_detail" -->
 
     </LinearLayout>
