--- a/app/src/main/res/layout/activity_wifi_device_list.xml
+++ b/app/src/main/res/layout/activity_wifi_device_list.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title_other_devices"
-        android:visibility="visible"
+        android:visibility="gone"
         android:background="#666"
         android:textColor="#fff"
         android:paddingLeft="5dp"
