--- a/app/src/main/res/menu/menu_buletooth_chat.xml
+++ b/app/src/main/res/menu/menu_buletooth_chat.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/secure_connect_scan"
-          android:icon="@android:drawable/ic_menu_search"
-          android:title="@string/secure_connect"
-          android:showAsAction="ifRoom|withText" />
-    <item android:id="@+id/insecure_connect_scan"
-          android:icon="@android:drawable/ic_menu_search"
-          android:title="@string/insecure_connect"
-          android:showAsAction="never" />
-    <item android:id="@+id/discoverable"
-          android:icon="@android:drawable/ic_menu_mylocation"
-          android:title="@string/discoverable"
-          android:showAsAction="never" />
+    <item
+        android:id="@+id/secure_connect_scan"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/secure_connect"
+        android:showAsAction="ifRoom|withText"
+        android:visible="false" />
+    <item
+        android:id="@+id/insecure_connect_scan"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/try_reconnect"
+        android:showAsAction="always" />
+    <item
+        android:id="@+id/discoverable"
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:title="@string/discoverable"
+        android:showAsAction="never" />
 </menu>
