--- a/app/src/main/res/layout/fragment_friends_page.xml
+++ b/app/src/main/res/layout/fragment_friends_page.xml
@@ -9,16 +9,13 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               tools:context="com.specialdark.utopia.shadowtalk.ShadowTalkActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="friends page"/>
-
     <ListView
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:id="@+id/list_view_friends"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:divider="#00000000"
+        android:dividerHeight="2dp">
 
     </ListView>
 
