--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@mipmap/main_background"
     tools:context="com.specialdark.utopia.shadowtalk.MyInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
