--- a/app/src/main/res/layout/row_friends.xml
+++ b/app/src/main/res/layout/row_friends.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:padding="6dp">
+    android:background="@mipmap/row_friend_background"
+    android:padding="6dp" >
 
     <ImageView
         android:id="@+id/friend_icon"
