--- a/app/src/main/res/layout/row_friends.xml
+++ b/app/src/main/res/layout/row_friends.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/friend_icon"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight"
         android:src="@mipmap/myself_icon"
         android:layout_weight="1"/>
     <LinearLayout
@@ -35,7 +35,7 @@
     <ImageView
         android:id="@+id/friend_statue"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight"
         android:src="@mipmap/myself_icon"
         android:layout_weight="1"/>
 
